# ISW3003

./: .gitignore  2021312779_project01_report.docx  Howework 4.data.txt  SWE3050_HW4.py  check_params.py  main.py  pr1_parameters.py  pr2_weight.py  pr3_freeze.py  pr4_hook.py  pr5_state.py  pyproject.toml
2021312779_project01/: README.md  pyproject.toml
2021312779_project01/src/: eval.py  measure_flops.py  predict.py  train.py  training_config.yaml
2021312779_project01/src/data/: augmentations.py  coco_voc_dataset.py  voc_dataset.py
2021312779_project01/src/models/: deeplabv3plus.py
2021312779_project01/src/utils/: attention.py  checkpoint.py  ema.py  losses.py  lovasz.py  metrics.py  optimizer.py  parameters.py
Project01/: Project01_colab.ipynb  README.md  eval.py  model_structure.onnx  predict.py  pyproject.toml  test.py  test2.py  train.py  train2.py
Project01/data/: coco_voc.py  pascal_voc.py  transforms.py
Project01/models/: deeplabv3plus.py  deeplabv3plus_efficientnet.py  deeplabv3plus_mobilenet.py  export_onnx_structure.py  transport_onnx.py
Project01/src/: eval.py  predict.py  semantic_segmentation.yaml  semantic_segmentation_efficientnet.yaml  train.py
Project01/src/data/: coco_voc.py  pascal_voc.py  transforms.py
Project01/src/models/: deeplabv3plus.py  export_onnx_structure.py
Project01/src/scripts/: prerender_coco_masks.py
Project01/src/tools/: measure_gflops.py
Project01/src/utils/: blocks.py  checkpoint.py  ema.py  (+3 more)
Project01/tools/: measure_gflops.py
Project01/utils/: checkpoint.py  ema.py  metrics.py  model_factory.py  optim.py
(+47 files in other folders)
